# tennis-ai-coach

./: .gitignore  prd-tennis-ai-coach.md
cv-pipeline/: pyproject.toml
cv-pipeline/src/tennis_cv/: __init__.py  classify.py  cli.py  coaching.py  drills.py  frames.py  metrics.py  overlay.py  pipeline.py  pose.py  preview.py  scoring.py  segmentation.py  types.py
cv-pipeline/tests/: test_classify.py  test_coaching.py  test_drills.py  test_frames.py  test_metrics.py  test_overlay.py  test_pipeline.py  test_pose.py  test_preview.py  test_scoring.py  test_segmentation.py  test_types.py
docs/superpowers/plans/: 2026-06-21-cv-analysis-pipeline.md  2026-06-22-drill-library-coaching.md
docs/superpowers/specs/: 2026-06-18-courtiq-design.md  2026-06-21-drill-library-coaching-design.md
