[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-cv"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
    "numpy>=1.26",
    "pydantic>=2.6",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
